--- a/code/app/src/main/res/layout/smob_planning_products_item.xml
+++ b/code/app/src/main/res/layout/smob_planning_products_item.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="item"
-            type="com.tanfra.shopmob.smob.data.repo.ato.SmobProductOnListATO" />
+            type="com.tanfra.shopmob.smob.data.repo.ato.SmobProductWithListDataATO" />
     </data>
 
     <androidx.cardview.widget.CardView
