Modal return destination from (now shared) group member details screen now working

--- a/code/app/src/main/res/navigation/nav_graph_admin.xml
+++ b/code/app/src/main/res/navigation/nav_graph_admin.xml
@@ -169,6 +169,9 @@
         <action
             android:id="@+id/action_smobAdminListGroupsTableFragment_to_smobAdminListGroupDetailsFragment"
             app:destination="@id/smobAdminListGroupDetailsFragment" />
+        <action
+            android:id="@+id/action_smobAdminListGroupsTableFragment_to_smobAdminGroupMembersTableFragment"
+            app:destination="@id/smobAdminGroupMembersTableFragment" />
     </fragment>
 
     <fragment
