Access to contacts stored on device & RV display

--- a/code/app/src/main/res/layout/fragment_admin_select_category.xml
+++ b/code/app/src/main/res/layout/fragment_admin_select_category.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/btProfile"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vertical_margin_large"
+                android:layout_marginTop="@dimen/vertical_margin_small"
                 android:layout_marginBottom="@dimen/vertical_margin_small"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:paddingStart="@dimen/button_padding"
@@ -63,7 +63,7 @@
                 android:id="@+id/btGroups"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vertical_margin_large"
+                android:layout_marginTop="@dimen/vertical_margin_small"
                 android:layout_marginBottom="@dimen/vertical_margin_small"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:paddingStart="@dimen/button_padding"
@@ -82,8 +82,8 @@
                 android:id="@+id/btLists"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vertical_margin_large"
-                android:layout_marginBottom="@dimen/vertical_margin_large"
+                android:layout_marginTop="@dimen/vertical_margin_small"
+                android:layout_marginBottom="@dimen/vertical_margin_small"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:paddingStart="@dimen/button_padding"
                 android:paddingEnd="@dimen/button_padding"
@@ -92,6 +92,25 @@
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/btGroups"
+                app:layout_constraintBottom_toTopOf="@id/btContacts"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <Button
+                android:id="@+id/btContacts"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/vertical_margin_small"
+                android:layout_marginBottom="@dimen/vertical_margin_large"
+                android:layout_marginStart="@dimen/horizontal_margin_small"
+                android:paddingStart="@dimen/button_padding"
+                android:paddingEnd="@dimen/button_padding"
+                android:text="@string/contacts"
+                android:textColor="@color/swipeSecondaryLightColor"
+                android:textSize="@dimen/button_text_size"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/btLists"
                 app:layout_constraintBottom_toTopOf="@id/btDismiss"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -101,8 +120,8 @@
                 android:id="@+id/btDismiss"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vertical_margin_large"
-                android:layout_marginBottom="@dimen/vertical_margin_large"
+                android:layout_marginTop="@dimen/vertical_margin_small"
+                android:layout_marginBottom="@dimen/vertical_margin_small"
                 android:layout_marginStart="@dimen/horizontal_margin_small"
                 android:paddingStart="@dimen/button_padding"
                 android:paddingEnd="@dimen/button_padding"
@@ -111,7 +130,7 @@
                 android:textSize="@dimen/button_text_size"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btLists"
+                app:layout_constraintTop_toBottomOf="@id/btContacts"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 />
