--- a/code/app/src/main/res/layout/row_contact.xml
+++ b/code/app/src/main/res/layout/row_contact.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="item"
-            type="com.tanfra.shopmob.smob.ui.admin.contacts.Contact" />
+            type="com.tanfra.shopmob.smob.data.repo.ato.SmobContactATO" />
     </data>
 
     <androidx.cardview.widget.CardView
