--- a/code/app/src/main/res/menu/navdrawer_planning_menu.xml
+++ b/code/app/src/main/res/menu/navdrawer_planning_menu.xml
@@ -3,13 +3,13 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/smobPlanningShopsTableFragment"
+            android:id="@id/smobPlanningShopsTableFragment"
             android:icon="@drawable/ic_baseline_shopping_cart_24"
             android:title="@string/shop_list" />
 
         <!-- using NavComponents to navigate to new activity (see 'planning' nav_graph) -->
         <item
-            android:id="@+id/smobAdminActivity"
+            android:id="@id/smobAdminActivity"
             android:icon="@drawable/ic_baseline_admin_panel_settings_24"
             android:title="@string/admin" />
 
