--- a/code/app/src/main/res/menu/navdrawer_admin_menu.xml
+++ b/code/app/src/main/res/menu/navdrawer_admin_menu.xml
@@ -9,7 +9,7 @@
 
         <!-- using NavComponents to navigate to new activity (see 'planning' nav_graph) -->
         <item
-            android:id="@+id/smobPlanningActivity"
+            android:id="@id/smobPlanningActivity"
             android:icon="@drawable/ic_baseline_view_list_24"
             android:title="@string/app_name_admin_lists" />
 
