--- a/code/app/src/main/res/layout/fragment_planning_shops_table.xml
+++ b/code/app/src/main/res/layout/fragment_planning_shops_table.xml
@@ -19,7 +19,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white">
+            app:netConnectBackground="@{viewModel.wManager.netActive}"
+            >
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/smobItemsRecyclerView"
