--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
   <color name="swipePrimaryTextColor">#1b5e20</color>
   <color name="swipeSecondaryTextColor">#1b5e20</color>
 
+  <color name="colorNoNetwork">#E1D9DA</color>
+
   <color name="colorAccent">#D81B60</color>
   <color name="black">#000000</color>
   <color name="white">#ffffff</color>
