--- a/code/app/src/main/res/layout/fragment_planning_products_table.xml
+++ b/code/app/src/main/res/layout/fragment_planning_products_table.xml
@@ -19,7 +19,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:netConnectBackground="@{viewModel.wManager.netActive}"
+            app:netConnectBackground="@{viewModel.networkConnectionManager}"
             >
 
             <androidx.recyclerview.widget.RecyclerView
