--- a/code/app/src/main/res/layout/smob_admin_member_with_group_item.xml
+++ b/code/app/src/main/res/layout/smob_admin_member_with_group_item.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_medium"
         android:foregroundTint="@color/swipePrimaryColor"
-        app:statusColor="@{item.itemStatus}"
+        app:statusColor="@{item.status}"
         app:fadeVisible="@{true}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
