--- a/code/app/src/main/res/layout/smob_planning_products_item.xml
+++ b/code/app/src/main/res/layout/smob_planning_products_item.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_medium"
         android:foregroundTint="@color/swipePrimaryColor"
-        app:statusColor="@{item.itemStatus}"
+        app:statusColor="@{item.status}"
         app:fadeVisible="@{true}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@{item.itemStatus.toString()}"
+                android:text="@{item.status.toString()}"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/text_size_small"
                 app:layout_constraintBottom_toBottomOf="@+id/tvProductDescription"
